--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
+  "proxy": "https://api.darksky.net:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
