--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "engines": {
