--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "10.x"
